
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recruiting-funnel-intelligence"
version = "0.1.0"
description = "Track stage conversion, sourcing quality, and recruiter throughput across hiring funnels."
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
